--- a/client/app/document/revision-new/revision-new.jade
+++ b/client/app/document/revision-new/revision-new.jade
@@ -1,24 +1,30 @@
 nav(ng-include='"components/navbar/navbar.html"')
 
-nav(ng-include='"components/elements/header.html"', ng-onload='title = {{revision.created}}')
+nav(ng-include='"components/elements/header.html"')
     
 .container
   .row
-    form.col-lg-9.col-md-12.center-block
-      h4
-        {{revision.document.title}} - {{revision.created}}  
-      .form-group
-        label(for='status-input')
-          | Status
-        input.form-control(type='text', id='status-input', ng-model='revision.status')
-      .form-group
-        label(for='content-input')
-          | Content
-        textarea.form-control(id='content-input', ng-model='revision.content')
-      button.btn.btn-default(ng-click='saveRevision()')
-        | Save
+    .col-lg-6.col-md-12
+      form
+        h4
+          {{document.title}} - {{revision.created}}  
+        .form-group
+          label(for='status-input')
+            | Status
+          select.form-control(id='status-input', ng-model='revision.state', ng-options='stateOption as stateOption for stateOption in stateOptions')
+            option(value='{{stateOption}}')
+          //input.form-control(type='text', id='status-input', ng-model='revision.state')
+        .form-group
+          label(for='content-input')
+            | Content
+          textarea.form-control(id='content-input', ng-model='revision.content')
+        button.btn.btn-primary(ng-click='saveRevision()')
+          | Save
 
-  .row
+    .col-lg-6.col-md-12
+      div(btf-markdown='revision.content')
+
+  //.row
     pre.col-lg-9.col-md-12.center-block
       {{json(revision)}}
 
