--- a/client/app/document/revision-new/revision-new.jade
+++ b/client/app/document/revision-new/revision-new.jade
@@ -5,7 +5,7 @@ nav(ng-include='"components/elements/header.html"')
 .container
   .row
     .col-lg-6.col-md-12
-      form
+      form.controls
         h4
           {{document.title}} - {{revision.created}}  
         .form-group
