--- a/client/app/document/revision/revision.jade
+++ b/client/app/document/revision/revision.jade
@@ -6,8 +6,18 @@ nav(ng-include='"components/elements/header.html"')
   .row
     //span(ng-show='isCurrent()')
       | Current revision
-    a.btn.btn-primary(ng-hide='isCurrent()' href='/wdiff/{{revision._id}}/{{revision.document.currentRevision}}')
-      | wdiff current
+    form.form-inline.controls.well
+
+      a.btn.btn-primary(ng-hide='App.isFirst(revision)' href='/{{revision.document._id}}/revision/{{App.previousRevision(revision.document, revision)._id}}')
+        | View Previous
+      //a.btn.btn-primary(ng-hide='App.isFirst()' href='/wdiff/{{App.previousRevision(revision.document, revision)._id}}/{{revision._id}}')
+        | Wdiff from Previous
+      //a.btn.btn-primary(ng-hide='App.isCurrent()' href='/wdiff/{{revision._id}}/{{App.nextRevision(revision.document, revision)._id}}')
+        | Wdiff to Next
+      a.btn.btn-primary(ng-hide='App.isCurrent(revision)' href='/{{revision.document._id}}/revision/{{App.nextRevision(revision.document, revision)._id}}')
+        | View Next
+      a.btn.btn-primary.pull-right(ng-hide='App.isCurrent(revision)' href='/wdiff/{{revision._id}}/{{revision.document.currentRevision}}')
+        | Wdiff to Current
 
   .row
     .col-lg-6.col-md-9
