--- a/client/components/elements/footer.jade
+++ b/client/components/elements/footer.jade
@@ -1,8 +1,8 @@
 div.footer
   .container
     p
-      a(href='https://madanworb.com') Adam Brown
+      a(href='https://adamarthurryan.com') Adam Brown
       = ' | '
-      | This website is 
+      = 'This website is '
       a(href='https://github.com/adamarthurryan/wdiff-markdown-editor') open source
       | .
