prepare for production deployment

--- a/client/app/compare/create/create.jade
+++ b/client/app/compare/create/create.jade
@@ -1,6 +1,6 @@
 // nav(ng-include='"components/navbar/navbar.html"')
 
-nav(ng-include='"components/elements/header.html"', onload='title = "wdiff markdown"; ')
+nav(ng-include='"components/elements/header.html"', onload='title = "dubdiff"; ')
 
 .container
 
