--- a/client/app/compare/show/show.jade
+++ b/client/app/compare/show/show.jade
@@ -1,6 +1,6 @@
 // nav(ng-include='"components/navbar/navbar.html"')
 
-nav(ng-include='"components/elements/header.html"', onload='title = "wdiff markdown";  subtitle ="results"')
+nav(ng-include='"components/elements/header.html"', onload='title = "dubdiff";  subtitle ="results"')
 
 .container
   .row
