--- a/client/app/compare/compare.scss
+++ b/client/app/compare/compare.scss
@@ -1,7 +1,27 @@
-.wdiff-container .ins {
+.wdiff ins {
+  background-color: #dbffdb;
 }
 
-.wdiff-container .del {
+.wdiff del {
+  background-color: #f8cbcb;
+}
+
+.content-pre {
+  font-family: Consolas,Menlo,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New,monospace,serif;
+  margin-bottom: 10px;
+  padding: 5px;
+  width: auto;
+  white-space: pre-wrap;
+}
+
+.content-well {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  //background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
 
 #docA, #docB {
